[gd_scene load_steps=25 format=2]

[ext_resource path="res://resource/Barra_Base.png" type="Texture" id=1]
[ext_resource path="res://resource/Bar_Life.png" type="Texture" id=2]
[ext_resource path="res://resource/tres/panelAtts.tres" type="StyleBox" id=3]
[ext_resource path="res://resource/fonts/m6x11-32Tiny.tres" type="DynamicFont" id=4]
[ext_resource path="res://resource/fonts/fntSkill.tres" type="DynamicFont" id=5]
[ext_resource path="res://resource/fonts/m6x11-32Spaced.tres" type="DynamicFont" id=6]
[ext_resource path="res://resource/fonts/m6x11-32.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/stats/strSkill.gd" type="Script" id=8]
[ext_resource path="res://resource/Bar_Food.png" type="Texture" id=9]
[ext_resource path="res://resource/BG_Stats_N1.png" type="Texture" id=10]
[ext_resource path="res://resource/Bar_BG.png" type="Texture" id=11]
[ext_resource path="res://scenes/statsBox.gd" type="Script" id=12]
[ext_resource path="res://mainTheme.tres" type="Theme" id=13]
[ext_resource path="res://scenes/hpBox.gd" type="Script" id=14]
[ext_resource path="res://scenes/foodBox.gd" type="Script" id=15]

[sub_resource type="GDScript" id=1]
script/source = "extends TextureRect
func _ready():
	if get_parent().bIsPlayerStats:set_process(true)
func _process(_delta):
	if get_parent().bIsPlayerStats:self.texture=global.getBgTexture()
"

[sub_resource type="GDScript" id=2]
script/source = "extends Label
var bIsPlayerStats:=false
func _ready():set_process(true)
func _process(_delta):
	if bIsPlayerStats:
		self.text=global.player.name
	else:
		self.text=global.enemy.name
"

[sub_resource type="GDScript" id=3]
script/source = "extends TextureProgress
var bIsPlayerStats:=false
func _ready():
	$cPUParticles2D.emitting=false
	set_process(true)
func _process(_delta):
	if self.bIsPlayerStats:
		self.max_value=global.player.maxHp
		self.value=lerp(self.value,global.player.hp,0.25)
		$cPUParticles2D.position.x=self.value*self.rect_size.x/self.max_value
		if abs(self.value-global.player.hp)>0.5 and self.value>0:
			$cPUParticles2D.emitting=true
		else:
			$cPUParticles2D.emitting=false
	else:
		self.max_value=global.enemy.maxHp
		self.value=lerp(self.value,global.enemy.hp,0.25)
		$cPUParticles2D.position.x=self.value*self.rect_size.x/self.max_value
		if abs(self.value-global.enemy.hp)>0.5 and self.value>0:
			$cPUParticles2D.emitting=true
		else:
			$cPUParticles2D.emitting=false

"

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, -0.0902597, 0, 0, Vector2( 1, 0 ), -5.24895, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.090379, 0.376093, 1 )
colors = PoolColorArray( 0.560784, 0.870588, 0.364706, 1, 0.235294, 0.639216, 0.439216, 1, 1, 1, 1, 0 )

[sub_resource type="GDScript" id=6]
script/source = "extends Label
var bIsPlayerStats:=false
func _ready():set_process(true)
func _process(_delta):
	if bIsPlayerStats:
		self.text=String(global.player.hp)+\"/\"+String(global.player.maxHp)
	else:
		self.text=String(global.enemy.hp)+\"/\"+String(global.enemy.maxHp)
"

[sub_resource type="GDScript" id=7]
script/source = "extends TextureProgress
var bIsPlayerStats:=false
func _ready():
	$cPUParticles2D.emitting=false
	set_process(true)
func _process(_delta):
	if self.bIsPlayerStats:
		self.max_value=global.player.maxEnergy
		self.value=lerp(self.value,global.player.energy,0.25)
		$cPUParticles2D.position.x=self.value*self.rect_size.x/self.max_value
		if abs(self.value-global.player.energy)>0.5 and self.value>0:
			$cPUParticles2D.emitting=true
		else:
			$cPUParticles2D.emitting=false
	else:
		self.max_value=global.enemy.maxEnergy
		self.value=lerp(self.value,global.enemy.energy,0.25)
		$cPUParticles2D.position.x=self.value*self.rect_size.x/self.max_value
		if abs(self.value-global.enemy.energy)>0.5 and self.value>0:
			$cPUParticles2D.emitting=true
		else:
			$cPUParticles2D.emitting=false


#extends TextureProgress
#var bIsPlayerStats:=false
#func _ready():set_process(true)
#func _process(delta):
#	if bIsPlayerStats:
#		self.max_value=global.player.maxEnergy
#		self.value=lerp(self.value,global.player.energy,0.25)
#	else:
#		self.max_value=global.enemy.maxEnergy
#		self.value=lerp(self.value,global.enemy.energy,0.25)
##	self.hint_tooltip=String(int(self.value))+\"/\"+String(int(self.max_value))
"

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.303207, 0.41691, 1 )
colors = PoolColorArray( 1, 0.568627, 0.4, 1, 1, 0.4, 0.4, 1, 0, 0, 0, 0 )

[sub_resource type="GDScript" id=9]
script/source = "extends Label
var bIsPlayerStats:=false
func _ready():set_process(true)
func _process(_delta):
	if bIsPlayerStats:
		self.text=String(global.player.energy)+\"/\"+String(global.player.maxEnergy)
	else:
		self.text=String(global.enemy.energy)+\"/\"+String(global.enemy.maxEnergy)
"

[node name="stats" type="PanelContainer"]
margin_right = 175.0
margin_bottom = 155.0
rect_min_size = Vector2( 175, 0 )
mouse_filter = 1
size_flags_stretch_ratio = 4.0
theme = ExtResource( 13 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 73.0 ]
}

[node name="twnOffset" type="Tween" parent="."]

[node name="texBg" type="TextureRect" parent="."]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 171.0
margin_bottom = 168.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
script = SubResource( 1 )

[node name="marginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 171.0
margin_bottom = 168.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="marginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 159.0
alignment = 1

[node name="strName" type="Label" parent="marginContainer/vbox"]
margin_right = 157.0
margin_bottom = 28.0
size_flags_vertical = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 6 )
text = "NOME"
align = 1
valign = 1
script = SubResource( 2 )

[node name="invSep" type="HSeparator" parent="marginContainer/vbox"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 32.0
margin_right = 157.0
margin_bottom = 37.0
custom_constants/separation = 5

[node name="vboxBars" type="VBoxContainer" parent="marginContainer/vbox"]
margin_top = 41.0
margin_right = 157.0
margin_bottom = 137.0

[node name="hpBox" type="HBoxContainer" parent="marginContainer/vbox/vboxBars"]
margin_right = 157.0
margin_bottom = 46.0
hint_tooltip = "Every attack your pigeon takes lowers their HP.
At zero, you lose your pigeon!"
mouse_default_cursor_shape = 16
alignment = 1
script = ExtResource( 14 )

[node name="twn" type="Tween" parent="marginContainer/vbox/vboxBars/hpBox"]

[node name="strHp" type="Label" parent="marginContainer/vbox/vboxBars/hpBox"]
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 7 )
text = "HP"
align = 1
valign = 1

[node name="vbox" type="VBoxContainer" parent="marginContainer/vbox/vboxBars/hpBox"]
margin_left = 64.0
margin_right = 157.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lifebar" type="TextureProgress" parent="marginContainer/vbox/vboxBars/hpBox/vbox"]
margin_right = 93.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
step = 0.1
value = 50.0
texture_under = ExtResource( 11 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
script = SubResource( 3 )

[node name="twn" type="Tween" parent="marginContainer/vbox/vboxBars/hpBox/vbox/lifebar"]

[node name="cPUParticles2D" type="CPUParticles2D" parent="marginContainer/vbox/vboxBars/hpBox/vbox/lifebar"]
position = Vector2( 80.5243, 11 )
z_index = 4096
amount = 50
lifetime = 1.5
speed_scale = 1.2
randomness = 0.3
lifetime_randomness = 0.2
local_coords = false
draw_order = 1
emission_shape = 2
emission_rect_extents = Vector2( 6, 4 )
direction = Vector2( 0, -1 )
spread = 90.0
initial_velocity = 10.0
initial_velocity_random = 1.0
scale_amount = 8.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="strLife" type="Label" parent="marginContainer/vbox/vboxBars/hpBox/vbox"]
margin_top = 29.0
margin_right = 93.0
margin_bottom = 46.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 4 )
text = "5/5"
align = 1
valign = 1
script = SubResource( 6 )

[node name="foodBox" type="HBoxContainer" parent="marginContainer/vbox/vboxBars"]
margin_top = 50.0
margin_right = 157.0
margin_bottom = 96.0
hint_tooltip = "Each attack uses a bit of food. At zero food, the pigeon:
-Takes only critical hits (except when prevented);
-Their damage is halved;
-Their attack speed is slightly slower.
If they get even hungrier, more bad things will happen!"
mouse_default_cursor_shape = 16
alignment = 1
script = ExtResource( 15 )

[node name="twn" type="Tween" parent="marginContainer/vbox/vboxBars/foodBox"]

[node name="strFood" type="Label" parent="marginContainer/vbox/vboxBars/foodBox"]
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "FOOD"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="vbox" type="VBoxContainer" parent="marginContainer/vbox/vboxBars/foodBox"]
margin_left = 64.0
margin_right = 157.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="foodBar" type="TextureProgress" parent="marginContainer/vbox/vboxBars/foodBox/vbox"]
margin_right = 93.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
step = 0.1
value = 25.0
texture_under = ExtResource( 11 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
script = SubResource( 7 )

[node name="twn" type="Tween" parent="marginContainer/vbox/vboxBars/foodBox/vbox/foodBar"]

[node name="cPUParticles2D" type="CPUParticles2D" parent="marginContainer/vbox/vboxBars/foodBox/vbox/foodBar"]
position = Vector2( 80.5243, 12 )
z_index = 4096
amount = 50
lifetime = 1.5
speed_scale = 1.2
randomness = 0.3
lifetime_randomness = 0.2
local_coords = false
draw_order = 1
emission_shape = 2
emission_rect_extents = Vector2( 6, 4 )
direction = Vector2( 0, -1 )
spread = 90.0
initial_velocity = 10.0
initial_velocity_random = 1.0
scale_amount = 8.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="strFood" type="Label" parent="marginContainer/vbox/vboxBars/foodBox/vbox"]
margin_top = 29.0
margin_right = 93.0
margin_bottom = 46.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 4 )
text = "10/10"
align = 1
valign = 1
script = SubResource( 9 )

[node name="strSkill" type="Label" parent="marginContainer/vbox"]
margin_left = 54.0
margin_top = 141.0
margin_right = 103.0
margin_bottom = 154.0
mouse_filter = 1
mouse_default_cursor_shape = 16
size_flags_horizontal = 4
size_flags_vertical = 1
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 5 )
text = "Skill name"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="twn" type="Tween" parent="marginContainer/vbox/strSkill"]

[connection signal="mouse_entered" from="marginContainer/vbox/vboxBars/hpBox" to="marginContainer/vbox/vboxBars/hpBox" method="_on_hpBox_mouse_entered"]
[connection signal="mouse_exited" from="marginContainer/vbox/vboxBars/hpBox" to="marginContainer/vbox/vboxBars/hpBox" method="_on_hpBox_mouse_exited"]
[connection signal="mouse_entered" from="marginContainer/vbox/vboxBars/foodBox" to="marginContainer/vbox/vboxBars/foodBox" method="_on_foodBox_mouse_entered"]
[connection signal="mouse_exited" from="marginContainer/vbox/vboxBars/foodBox" to="marginContainer/vbox/vboxBars/foodBox" method="_on_foodBox_mouse_exited"]
[connection signal="mouse_entered" from="marginContainer/vbox/strSkill" to="marginContainer/vbox/strSkill" method="_on_strSkill_mouse_entered"]
[connection signal="mouse_exited" from="marginContainer/vbox/strSkill" to="marginContainer/vbox/strSkill" method="_on_strSkill_mouse_exited"]
